feat: modify trashtalk message

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,10 +13,10 @@
           <div class="card text-center border-0" style="width: 18rem;">
             <img
               src="https://www.careermatch.com/job-prep/wp-content/uploads/sites/2/2018/09/software-engineer-1500x1000.jpg"
-              class="card-img-top" alt="engineer-picture">
+              class="card-img-top" alt="engineer-picture" width="200" height="190">
             <div class="card-body">
-              <input class="form-check-input" type="radio" name="target" id="inlineRadio1" value="engineer">
-              <label class="form-check-label" for="inlineRadio1">工程師</label>
+              <input class="form-check-input" type="radio" name="target" id="inlineRadio1" value="engineer" <label
+                class="form-check-label" for="inlineRadio1">工程師</label>
             </div>
           </div>
         </div>
@@ -26,7 +26,7 @@
         <div class="form-check form-check-inline">
           <div class="card text-center border-0" style="width: 18rem;">
             <img src="https://bnextmedia.s3.hicloud.net.tw/image/album/2019-09/img-1567393084-70711@900.jpg"
-              class="card-img-top" alt="designer-picture">
+              class="card-img-top" alt="designer-picture" width="200" height="190">
             <div class="card-body">
               <input class="form-check-input" type="radio" name="target" id="inlineRadio2" value="designer">
               <label class="form-check-label" for="inlineRadio2">設計師</label>
@@ -40,7 +40,7 @@
           <div class="card text-center border-0" style="width: 18rem;">
             <img
               src="https://image-resizer.cwg.tw/resize/uri/https%3A%2F%2Fcw1.tw%2FCW%2Fimages%2Farticle%2F201707%2Farticle-595afe2e551ff.jpg/?w=1600"
-              class="card-img-top" alt="entrepreneur-picture">
+              class="card-img-top" alt="entrepreneur-picture" width="200" height="190">
             <div class="card-body">
               <input class="form-check-input" type="radio" name="target" id="inlineRadio3" value="entrepreneur">
               <label class="form-check-label" for="inlineRadio3">創業家</label>
@@ -48,8 +48,6 @@
           </div>
         </div>
       </div>
-
-
 
       <div class="col">
         <button type="submit" class="btn btn-success">產生幹話</button>
